syntax = "proto3";

package ON.Fragments.Authorization.Payments.ParallelEconomy;

message ParallelEconomySettings {
  bool Enabled = 1;
  string Url = 2;
  string UserId = 3;
  string UserApiKey = 4;
  string LocationId = 5;
  string ProductId = 6;
}
